fix top header on mobile

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -5,14 +5,11 @@ header {
   background-color: white;
 }
 
-
-
-
 .switch-site {
   background: $color-blue;
   height: 40px;
   @include media-up-to(sm) {
-    height: 28px;
+    height: 23px;
     text-align: center;
   }
   div {
@@ -40,7 +37,7 @@ header {
       @include media-up-to(sm) {
         width: 100px;
         background-color: transparent;
-        padding-top: 5px;
+        padding-top: 2px;
         font-size: 13px;
         text-decoration: underline;
         font-weight: 200;
@@ -74,7 +71,8 @@ header {
     img {
       margin: 20px 40px 10px 0;
       @include media-up-to(sm) {
-        width: 135px;
+        margin: 8px auto;
+        @include img-keep-ratio(45px);
       }
     }
   }
