--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -17,3 +17,11 @@ $divider-border-lightgray: solid #d2d2d2 .05em;
     @media only screen and (max-width: 575px) { @content; }
   }
 }
+
+
+@mixin img-keep-ratio($max-height) {
+  display: block;
+  max-height: $max-height;
+  width: auto;
+  height: auto;
+}
